tests/paczka1/fuzzy1/91294416.err
Error in line 13: Z5xkRuyDkq A998 39,49
Error in line 5: mYREwd3tgtl A998 35,2
Error in line 17: HRiZK7i S865 16,9
Error in line 20: Z5xkRuyDkq S865 11,0
Error in line 26: j1G S865 79,0
Error in line 27: j1G S118 68,9
Error in line 24: HRiZK7i A407 35,8
Error in line 37: HRiZK7i A998 37,4
